--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,182 +13,182 @@
 
 /* Overriding container in tailwind */
 @utility container {
-    margin-inline: auto;
-    padding-inline: 2rem;
-    max-width: 100%;
-    @variant 2xl {
-        max-width: 1400px;
-    }
+	margin-inline: auto;
+	padding-inline: 2rem;
+	max-width: 100%;
+	@variant 2xl {
+		max-width: 1400px;
+	}
 }
 
 /* Tailwind Theme config */
 @theme {
-    /* Custom Fonts */
-    /* --font-sans: var(--font-sans);
+	/* Custom Fonts */
+	/* --font-sans: var(--font-sans);
     --font-mono: var(--font-mono); */
 
-    /* Custom Colors Theme */
-    /* Primary color */
-    --color-primary-10: oklch(97.56% 0.008 293.91);
-    --color-primary-50: oklch(95.52% 0.0176 296.63);
-    --color-primary-100: oklch(90.83% 0.0341 293.05);
-    --color-primary-150: oklch(81.43% 0.0718 293.73);
-    --color-primary-200: oklch(72.08% 0.1096 291.86);
-    --color-primary-300: oklch(62.58% 0.1499 289.93);
-    --color-primary-400: oklch(53.55% 0.1871 286.57);
-    --color-primary-500: oklch(45.69% 0.1567 287.03);
-    --color-primary-600: oklch(37.66% 0.1233 287.41);
-    --color-primary-700: oklch(29% 0.089 288.61);
-    --color-primary-800: oklch(19.78% 0.0489 288.45);
-    --color-primary-900: oklch(14.64% 0.0281 293.59);
-    --color-primary-950: oklch(11.35% 0.0175 293.02);
+	/* Custom Colors Theme */
+	/* Primary color */
+	--color-primary-10: oklch(97.56% 0.008 293.91);
+	--color-primary-50: oklch(95.52% 0.0176 296.63);
+	--color-primary-100: oklch(90.83% 0.0341 293.05);
+	--color-primary-150: oklch(81.43% 0.0718 293.73);
+	--color-primary-200: oklch(72.08% 0.1096 291.86);
+	--color-primary-300: oklch(62.58% 0.1499 289.93);
+	--color-primary-400: oklch(53.55% 0.1871 286.57);
+	--color-primary-500: oklch(45.69% 0.1567 287.03);
+	--color-primary-600: oklch(37.66% 0.1233 287.41);
+	--color-primary-700: oklch(29% 0.089 288.61);
+	--color-primary-800: oklch(19.78% 0.0489 288.45);
+	--color-primary-900: oklch(14.64% 0.0281 293.59);
+	--color-primary-950: oklch(11.35% 0.0175 293.02);
 
-    /* Secondary color */
-    --color-secondary-10: oklch(98.14% 0.0011 197.14);
-    --color-secondary-50: oklch(96.42% 0 0);
-    --color-secondary-100: oklch(92.45% 0.0017 247.84);
-    --color-secondary-150: oklch(84.73% 0.0035 247.87);
-    --color-secondary-200: oklch(77.05% 0.0053 228.84);
-    --color-secondary-300: oklch(68.93% 0.0065 223.49);
-    --color-secondary-400: oklch(60.59% 0.0085 228.94);
-    --color-secondary-500: oklch(51.71% 0.007 223.54);
-    --color-secondary-600: oklch(42.46% 0.0062 228.94);
-    --color-secondary-700: oklch(32.38% 0.0045 247.97);
-    --color-secondary-800: oklch(21.71% 0.0025 247.94);
-    --color-secondary-900: oklch(15.91% 0 0);
-    --color-secondary-950: oklch(12.7% 0.0023 196.87);
+	/* Secondary color */
+	--color-secondary-10: oklch(98.14% 0.0011 197.14);
+	--color-secondary-50: oklch(96.42% 0 0);
+	--color-secondary-100: oklch(92.45% 0.0017 247.84);
+	--color-secondary-150: oklch(84.73% 0.0035 247.87);
+	--color-secondary-200: oklch(77.05% 0.0053 228.84);
+	--color-secondary-300: oklch(68.93% 0.0065 223.49);
+	--color-secondary-400: oklch(60.59% 0.0085 228.94);
+	--color-secondary-500: oklch(51.71% 0.007 223.54);
+	--color-secondary-600: oklch(42.46% 0.0062 228.94);
+	--color-secondary-700: oklch(32.38% 0.0045 247.97);
+	--color-secondary-800: oklch(21.71% 0.0025 247.94);
+	--color-secondary-900: oklch(15.91% 0 0);
+	--color-secondary-950: oklch(12.7% 0.0023 196.87);
 
-    /* Tertiary color */
-    --color-tertiary-10: oklch(97.56% 0.0086 264.52);
-    --color-tertiary-50: oklch(95.53% 0.0171 256.28);
-    --color-tertiary-100: oklch(90.86% 0.0354 258.87);
-    --color-tertiary-150: oklch(81.67% 0.0734 258.11);
-    --color-tertiary-200: oklch(72.66% 0.1127 258.28);
-    --color-tertiary-300: oklch(63.91% 0.1512 258.27);
-    --color-tertiary-400: oklch(55.89% 0.1888 259.11);
-    --color-tertiary-500: oklch(47.63% 0.1575 258.96);
-    --color-tertiary-600: oklch(39.08% 0.1258 258.92);
-    --color-tertiary-700: oklch(29.96% 0.0905 258.59);
-    --color-tertiary-800: oklch(20.17% 0.0507 258.43);
-    --color-tertiary-900: oklch(14.67% 0.0286 251.37);
-    --color-tertiary-950: oklch(11.33% 0.019 254.29);
+	/* Tertiary color */
+	--color-tertiary-10: oklch(97.56% 0.0086 264.52);
+	--color-tertiary-50: oklch(95.53% 0.0171 256.28);
+	--color-tertiary-100: oklch(90.86% 0.0354 258.87);
+	--color-tertiary-150: oklch(81.67% 0.0734 258.11);
+	--color-tertiary-200: oklch(72.66% 0.1127 258.28);
+	--color-tertiary-300: oklch(63.91% 0.1512 258.27);
+	--color-tertiary-400: oklch(55.89% 0.1888 259.11);
+	--color-tertiary-500: oklch(47.63% 0.1575 258.96);
+	--color-tertiary-600: oklch(39.08% 0.1258 258.92);
+	--color-tertiary-700: oklch(29.96% 0.0905 258.59);
+	--color-tertiary-800: oklch(20.17% 0.0507 258.43);
+	--color-tertiary-900: oklch(14.67% 0.0286 251.37);
+	--color-tertiary-950: oklch(11.33% 0.019 254.29);
 
-    /* Brand Colors */
-    --color-dark: var(--dark);
-    --color-light: var(--light);
-    --color-accent-purple: var(--accent-purple);
-    --color-accent-orange: var(--accent-orange);
-    --color-accent-pink: var(--accent-pink);
-    --color-accent-yellow: var(--accent-yellow);
+	/* Brand Colors */
+	--color-dark: var(--dark);
+	--color-light: var(--light);
+	--color-accent-purple: var(--accent-purple);
+	--color-accent-orange: var(--accent-orange);
+	--color-accent-pink: var(--accent-pink);
+	--color-accent-yellow: var(--accent-yellow);
 
-    /* App Theme Declarations */
-    --color-background: var(--background);
-    --color-foreground: var(--foreground);
-    --color-card: var(--card);
-    --color-card-foreground: var(--card-foreground);
-    --color-popover: var(--popover);
-    --color-popover-foreground: var(--popover-foreground);
-    --color-primary: var(--primary);
-    --color-primary-foreground: var(--primary-foreground);
-    --color-secondary: var(--secondary);
-    --color-secondary-foreground: var(--secondary-foreground);
-    --color-muted: var(--muted);
-    --color-muted-foreground: var(--muted-foreground);
-    --color-accent: var(--accent);
-    --color-accent-foreground: var(--accent-foreground);
-    --color-destructive: var(--destructive);
-    --color-destructive-foreground: var(--destructive-foreground);
-    --color-border: var(--border);
-    --color-input: var(--input);
-    --color-ring: var(--ring);
-    --color-chart-1: var(--chart-1);
-    --color-chart-2: var(--chart-2);
-    --color-chart-3: var(--chart-3);
-    --color-chart-4: var(--chart-4);
-    --color-chart-5: var(--chart-5);
-    --radius-sm: calc(var(--radius) - 4px);
-    --radius-md: calc(var(--radius) - 2px);
-    --radius-lg: var(--radius);
-    --radius-xl: calc(var(--radius) + 4px);
-    --color-sidebar-ring: var(--sidebar-ring);
-    --color-sidebar-border: var(--sidebar-border);
-    --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
-    --color-sidebar-accent: var(--sidebar-accent);
-    --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
-    --color-sidebar-primary: var(--sidebar-primary);
-    --color-sidebar-foreground: var(--sidebar-foreground);
-    --color-sidebar: var(--sidebar);
-    --animate-accordion-down: accordion-down 0.2s ease-out;
-    --animate-accordion-up: accordion-up 0.2s ease-out;
+	/* App Theme Declarations */
+	--color-background: var(--background);
+	--color-foreground: var(--foreground);
+	--color-card: var(--card);
+	--color-card-foreground: var(--card-foreground);
+	--color-popover: var(--popover);
+	--color-popover-foreground: var(--popover-foreground);
+	--color-primary: var(--primary);
+	--color-primary-foreground: var(--primary-foreground);
+	--color-secondary: var(--secondary);
+	--color-secondary-foreground: var(--secondary-foreground);
+	--color-muted: var(--muted);
+	--color-muted-foreground: var(--muted-foreground);
+	--color-accent: var(--accent);
+	--color-accent-foreground: var(--accent-foreground);
+	--color-destructive: var(--destructive);
+	--color-destructive-foreground: var(--destructive-foreground);
+	--color-border: var(--border);
+	--color-input: var(--input);
+	--color-ring: var(--ring);
+	--color-chart-1: var(--chart-1);
+	--color-chart-2: var(--chart-2);
+	--color-chart-3: var(--chart-3);
+	--color-chart-4: var(--chart-4);
+	--color-chart-5: var(--chart-5);
+	--radius-sm: calc(var(--radius) - 4px);
+	--radius-md: calc(var(--radius) - 2px);
+	--radius-lg: var(--radius);
+	--radius-xl: calc(var(--radius) + 4px);
+	--color-sidebar-ring: var(--sidebar-ring);
+	--color-sidebar-border: var(--sidebar-border);
+	--color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
+	--color-sidebar-accent: var(--sidebar-accent);
+	--color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
+	--color-sidebar-primary: var(--sidebar-primary);
+	--color-sidebar-foreground: var(--sidebar-foreground);
+	--color-sidebar: var(--sidebar);
+	--animate-accordion-down: accordion-down 0.2s ease-out;
+	--animate-accordion-up: accordion-up 0.2s ease-out;
 
-    /* Keyframes Declarations */
-    @keyframes accordion-down {
-        from {
-            height: 0;
-        }
-        to {
-            height: var(--radix-accordion-content-height);
-        }
-    }
-    @keyframes accordion-up {
-        from {
-            height: var(--radix-accordion-content-height);
-        }
-        to {
-            height: 0;
-        }
-    }
+	/* Keyframes Declarations */
+	@keyframes accordion-down {
+		from {
+			height: 0;
+		}
+		to {
+			height: var(--radix-accordion-content-height);
+		}
+	}
+	@keyframes accordion-up {
+		from {
+			height: var(--radix-accordion-content-height);
+		}
+		to {
+			height: 0;
+		}
+	}
 }
 
 /* Default Color Declarations */
 :root {
-    /* Radius Default Size */
-    --radius: 0.4rem;
+	/* Radius Default Size */
+	--radius: 0.4rem;
 
-    /* Colors Declaration */
-    --dark: #1c1d20;
-    --light: #f3f4f9;
-    --accent-purple: #6a53d2;
-    --accent-orange: #dc6a33;
-    --accent-pink: #d5295b;
-    --accent-yellow: #c6a92a;
+	/* Colors Declaration */
+	--dark: #1c1d20;
+	--light: #f3f4f9;
+	--accent-purple: #6a53d2;
+	--accent-orange: #dc6a33;
+	--accent-pink: #d5295b;
+	--accent-yellow: #c6a92a;
 
-    --foreground: #0e0f11;
-    --background: #f6f8fc;
-    --card-foreground: var(--dark);
-    --card: var(--light);
-    --popover-foreground: var(--color-secondary-900);
-    --popover: var(--color-gray-100);
-    --primary: var(--color-primary-500);
-    --primary-foreground: var(--color-primary-100);
-    --secondary-foreground: var(--color-secondary-800);
-    --secondary: var(--color-secondary-100);
-    --muted-foreground: var(--color-secondary-700);
-    --muted: var(--color-secondary-500);
-    --accent-foreground: var(--color-primary-600);
-    --accent: var(--color-primary-100);
-    --destructive: var(--color-red-700);
-    --destructive-foreground: var(--color-red-50);
-    --border: var(--color-primary-300);
-    --input: var(--color-secondary-100);
-    --ring: var(--color-secondary-400);
+	--foreground: #0e0f11;
+	--background: #f6f8fc;
+	--card-foreground: var(--dark);
+	--card: var(--light);
+	--popover-foreground: var(--color-secondary-900);
+	--popover: var(--color-gray-100);
+	--primary: var(--color-primary-500);
+	--primary-foreground: var(--color-primary-100);
+	--secondary-foreground: var(--color-secondary-800);
+	--secondary: var(--color-secondary-100);
+	--muted-foreground: var(--color-secondary-700);
+	--muted: var(--color-secondary-500);
+	--accent-foreground: var(--color-primary-600);
+	--accent: var(--color-primary-100);
+	--destructive: var(--color-red-700);
+	--destructive-foreground: var(--color-red-50);
+	--border: var(--color-primary-300);
+	--input: var(--color-secondary-100);
+	--ring: var(--color-secondary-400);
 
-    /* Dark mode chart colors */
-    --chart-1: hsl(12 76% 61%);
-    --chart-2: hsl(173 58% 39%);
-    --chart-3: hsl(197 37% 24%);
-    --chart-4: hsl(43 74% 66%);
-    --chart-5: hsl(27 87% 67%);
+	/* Dark mode chart colors */
+	--chart-1: hsl(12 76% 61%);
+	--chart-2: hsl(173 58% 39%);
+	--chart-3: hsl(197 37% 24%);
+	--chart-4: hsl(43 74% 66%);
+	--chart-5: hsl(27 87% 67%);
 
-    /* Sidebar colors */
-    --sidebar-background: var(--background);
-    --sidebar-foreground: var(--foreground);
-    --sidebar-primary: var(--primary);
-    --sidebar-primary-foreground: var(--primary-foreground);
-    --sidebar-accent: var(--accent);
-    --sidebar-accent-foreground: var(--accent-foreground);
-    --sidebar-border: var(--border);
-    --sidebar-ring: var(--ring);
+	/* Sidebar colors */
+	--sidebar-background: var(--background);
+	--sidebar-foreground: var(--foreground);
+	--sidebar-primary: var(--primary);
+	--sidebar-primary-foreground: var(--primary-foreground);
+	--sidebar-accent: var(--accent);
+	--sidebar-accent-foreground: var(--accent-foreground);
+	--sidebar-border: var(--border);
+	--sidebar-ring: var(--ring);
 }
 /*
   ---break---
@@ -196,48 +196,48 @@
 
 /* Dark Color Replacements */
 .dark {
-    /* Colors Declaration */
-    --accent-purple: #5542a8;
-    --accent-orange: #db5c1d;
-    --accent-pink: #d3164b;
-    --accent-yellow: #d6b20f;
+	/* Colors Declaration */
+	--accent-purple: #5542a8;
+	--accent-orange: #db5c1d;
+	--accent-pink: #d3164b;
+	--accent-yellow: #d6b20f;
 
-    --foreground: #f6f8fc;
-    --background: #0e0f11;
-    --card: var(--dark);
-    --card-foreground: var(--light);
-    --popover: var(--color-secondary-900);
-    --popover-foreground: var(--color-gray-100);
-    --primary: var(--color-primary-500);
-    --primary-foreground: var(--color-primary-100);
-    --secondary: var(--color-secondary-800);
-    --secondary-foreground: var(--color-secondary-300);
-    --muted: var(--color-secondary-700);
-    --muted-foreground: var(--color-secondary-500);
-    --accent: var(--color-primary-600);
-    --accent-foreground: var(--color-primary-100);
-    --destructive: var(--color-red-700);
-    --destructive-foreground: var(--color-red-50);
-    --border: var(--color-primary-800);
-    --input: var(--color-secondary-800);
-    --ring: var(--color-secondary-700);
+	--foreground: #f6f8fc;
+	--background: #0e0f11;
+	--card: var(--dark);
+	--card-foreground: var(--light);
+	--popover: var(--color-secondary-900);
+	--popover-foreground: var(--color-gray-100);
+	--primary: var(--color-primary-500);
+	--primary-foreground: var(--color-primary-100);
+	--secondary: var(--color-secondary-800);
+	--secondary-foreground: var(--color-secondary-300);
+	--muted: var(--color-secondary-700);
+	--muted-foreground: var(--color-secondary-500);
+	--accent: var(--color-primary-600);
+	--accent-foreground: var(--color-primary-100);
+	--destructive: var(--color-red-700);
+	--destructive-foreground: var(--color-red-50);
+	--border: var(--color-primary-800);
+	--input: var(--color-secondary-800);
+	--ring: var(--color-secondary-700);
 
-    /* Dark mode chart colors */
-    --chart-1: hsl(220 70% 50%);
-    --chart-2: hsl(160 60% 45%);
-    --chart-3: hsl(30 80% 55%);
-    --chart-4: hsl(280 65% 60%);
-    --chart-5: hsl(340 75% 55%);
+	/* Dark mode chart colors */
+	--chart-1: hsl(220 70% 50%);
+	--chart-2: hsl(160 60% 45%);
+	--chart-3: hsl(30 80% 55%);
+	--chart-4: hsl(280 65% 60%);
+	--chart-5: hsl(340 75% 55%);
 
-    /* Sidebar colors */
-    --sidebar-background: var(--background);
-    --sidebar-foreground: var(--foreground);
-    --sidebar-primary: var(--primary);
-    --sidebar-primary-foreground: var(--primary-foreground);
-    --sidebar-accent: var(--accent);
-    --sidebar-accent-foreground: var(--accent-foreground);
-    --sidebar-border: var(--border);
-    --sidebar-ring: var(--ring);
+	/* Sidebar colors */
+	--sidebar-background: var(--background);
+	--sidebar-foreground: var(--foreground);
+	--sidebar-primary: var(--primary);
+	--sidebar-primary-foreground: var(--primary-foreground);
+	--sidebar-accent: var(--accent);
+	--sidebar-accent-foreground: var(--accent-foreground);
+	--sidebar-border: var(--border);
+	--sidebar-ring: var(--ring);
 }
 
 /*
@@ -249,18 +249,18 @@
   color utility to any element that depends on these defaults.
 */
 @layer base {
-    *,
-    ::after,
-    ::before,
-    ::backdrop,
-    ::file-selector-button {
-        border-color: var(--color-gray-200, currentColor);
-    }
+	*,
+	::after,
+	::before,
+	::backdrop,
+	::file-selector-button {
+		border-color: var(--color-gray-200, currentColor);
+	}
 
-    * {
-        @apply border-border outline-ring/50;
-    }
-    body {
-        @apply h-svh w-screen overflow-hidden bg-background text-foreground;
-    }
+	* {
+		@apply border-border outline-ring/50;
+	}
+	body {
+		@apply bg-background text-foreground h-svh w-screen overflow-hidden;
+	}
 }
