--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -307,11 +307,28 @@
 */
 @layer base {
 	* {
-		margin: 0;
-		padding: 0;
+		@apply border-border m-0 p-0 antialiased;
 	}
 	body {
 		@apply bg-background text-foreground border-border h-svh w-screen overflow-hidden;
+	}
+
+	.bg-plus-pattern {
+		background-image:
+			linear-gradient(
+				transparent 19px,
+				currentColor 19px,
+				currentColor 21px,
+				transparent 21px
+			),
+			linear-gradient(
+				90deg,
+				transparent 19px,
+				currentColor 19px,
+				currentColor 21px,
+				transparent 21px
+			);
+		background-size: 40px 40px;
 	}
 
 	/* Shadcn collapsible component animation */
