--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -310,12 +310,11 @@
 		@apply border-border m-0 p-0 antialiased;
 	}
 	body {
-		@apply bg-background text-foreground border-border h-svh w-screen overflow-hidden;
+		@apply bg-background text-foreground !border-border h-svh w-screen overflow-hidden;
 	}
 
 	.bg-plus-pattern {
-		background-image:
-			linear-gradient(
+		background-image: linear-gradient(
 				transparent 19px,
 				currentColor 19px,
 				currentColor 21px,
