--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -314,7 +314,8 @@
 	}
 
 	.bg-plus-pattern {
-		background-image: linear-gradient(
+		background-image:
+			linear-gradient(
 				transparent 19px,
 				currentColor 19px,
 				currentColor 21px,
