--- a/src/app/_styles/notespace-editor.css
+++ b/src/app/_styles/notespace-editor.css
@@ -10,9 +10,12 @@
 }
 
 .bn-container[data-theming-css-demo] .bn-suggestion-menu {
-	@apply bg-sidebar/60 max-h-96 backdrop-blur-md;
+	@apply bg-sidebar/85 max-h-96 backdrop-blur-2xl;
 }
 
+.bn-container[data-theming-css-demo] [data-file-block] .bn-add-file-button {
+	@apply bg-secondary-800 hover:bg-secondary-700;
+}
 .alert {
 	display: flex;
 	justify-content: center;
@@ -24,27 +27,27 @@
 }
 
 .alert[data-alert-type='warning'] {
-	background-color: #fff6e6;
+	@apply bg-yellow-100;
 }
 
 .alert[data-alert-type='error'] {
-	@apply bg-red-50;
+	@apply bg-red-100;
 }
 
 .alert[data-alert-type='info'] {
-	background-color: #e6ebff;
+	@apply bg-blue-100;
 }
 
 .alert[data-alert-type='success'] {
-	background-color: #e6ffe6;
+	@apply text-green-100;
 }
 
 [data-color-scheme='dark'] .alert[data-alert-type='warning'] {
-	@apply bg-yellow-800/65;
+	@apply text-yellow-100;
 }
 
 [data-color-scheme='dark'] .alert[data-alert-type='error'] {
-	@apply bg-red-950/65;
+	background-color: #802020;
 }
 
 [data-color-scheme='dark'] .alert[data-alert-type='info'] {
@@ -69,11 +72,11 @@
 }
 
 .alert-icon[data-alert-icon-type='warning'] {
-	@apply text-yellow-500;
+	color: #e69819;
 }
 
 .alert-icon[data-alert-icon-type='error'] {
-	@apply text-red-500;
+	color: #d80d0d;
 }
 
 .alert-icon[data-alert-icon-type='info'] {
@@ -86,8 +89,4 @@
 
 .inline-content {
 	flex-grow: 1;
-}
-
-[data-color-scheme='dark'] .alert-icon[data-alert-icon-type='error'] {
-	@apply text-red-700/65;
 }
